fix((report-state-toggle)): use icon only for mobile instead of hiding graph view
- Hiding graph view is less intutitive than not showing text. Hide text and use icon views for
phone/mobile view instead.

relates to KBDEV-853

--- a/src/components/RecordForm/index.scss
+++ b/src/components/RecordForm/index.scss
@@ -42,17 +42,6 @@
         float: right;
       }
 
-      &--edit {
-
-        /* edit state in mobile view should hide graph button */
-        .toggle-option__graph {
-          display: none;
-
-          @media (min-width: $breakpoint-med) {
-            display: default;
-          }
-        }
-      }
     }
 
     .header__review-action {
